fixed Quote styling and added bold font

--- a/DC_Docs/index.html
+++ b/DC_Docs/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>DC Docs</title>
-        <link href="https://fonts.googleapis.com/css?family=Catamaran&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Catamaran:400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/styles/style.css" class="stylesheet">
     </head>
     <body>
@@ -28,7 +28,7 @@
                 You can scroll down to read all of this website, click on the navigation buttons on the left, or search for a specific topic using the search bar on the left.
                 This website is a work in progress, so don't be surprised if all the text below this paragraph is gibberish.
             </div>
-            <blockquote><em><sup>"</sup>We should give the students some bogus assignment so that  we can leave and go play laser tag down the street... wait, are you writing this down? Don't write this down!<div class="name"><sup>"</sup>- Adam Szaruga</div></blockquote></em></blockquote>
+            <blockquote><em><span class="quote">We should give the students some bogus assignment so that  we can leave and go play laser tag down the street... wait, are you writing this down? Don't write this down!</span><div class="name">- Adam Szaruga</div></blockquote></em></blockquote>
             <div class="heading">Motivation</div>
             <div class="content">
                     Godfather ipsum dolor sit amet. My father's name was Antonio Andolini... and this is for you. Michael, you never told me you knew Johnny Fontane! My father taught me many things here - he taught me in this room. He taught me: keep your friends close, but your enemies closer. This one time, this one time I'll let you ask me about my affairs. It's an old habit. I spent my whole life trying not to be careless. Women and children can afford to be careless, but not men.
